Add the backend and All viewModel

--- a/XamarinRefit/XamarinRefit.iOS/XamarinRefit.iOS.csproj
+++ b/XamarinRefit/XamarinRefit.iOS/XamarinRefit.iOS.csproj
@@ -134,4 +134,7 @@
       <Name>XamarinRefit</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\image.png" />
+  </ItemGroup>
 </Project>
