--- a/XamarinRefit/XamarinRefit.Android/XamarinRefit.Android.csproj
+++ b/XamarinRefit/XamarinRefit.Android/XamarinRefit.Android.csproj
@@ -108,5 +108,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\image.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_arrow_forward_ios.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
