Add the take a photo and all configure with the plugin xalm plugin media

--- a/XamarinRefit/XamarinRefit/XamarinRefit.csproj
+++ b/XamarinRefit/XamarinRefit/XamarinRefit.csproj
@@ -14,11 +14,13 @@
     <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Refit" Version="4.7.9" />
+    <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\" />
     <Folder Include="Service\" />
   </ItemGroup>
 
