--- a/Xamarin.Refit/Xamarin.Refit.csproj
+++ b/Xamarin.Refit/Xamarin.Refit.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\Images\Products\" />
   </ItemGroup>
 
   <ItemGroup>
