--- a/XamarinRefit/XamarinRefit.Android/XamarinRefit.Android.csproj
+++ b/XamarinRefit/XamarinRefit.Android/XamarinRefit.Android.csproj
@@ -111,5 +111,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_arrow_forward_ios.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
